--- a/Style/Style3.css
+++ b/Style/Style3.css
@@ -42,18 +42,10 @@
   		height: 20px;
 		margin-right: 0vw;
 	}
-	.for_title1{
-		display: flex;
-		flex-direction: column; /* Убираем все элементы в столбик */
-		align-items: flex-start; /* Выравниваем по левому краю */
-		justify-content: flex-start; /* Выравниваем по верхнему краю */
-		width: auto;
-		text-align: left;
-		margin-top: 0vh;
- 		padding-left: 3vw;
-		grid-area: 1 / 1 / 2 / 10;
-		margin-left: 0vh;
-		margin-bottom: 0vh;
+	.for_title1 h1, .for_title1 h2 {
+		width: 100%; 
+		margin: 0; 
+		white-space: nowrap;
 	}
 	.for_title1 h1 {
 		font-size: 24px;
