--- a/Style/Style1.css
+++ b/Style/Style1.css
@@ -96,6 +96,7 @@
 		font-size: 96px;
 		font-weight: 500;
 		color: #3D3B38;
+		text-align: justify; 
 	}
 
 	.for_title1 h2 {
@@ -103,6 +104,7 @@
 		font-weight: 400;
 		color: #3D3B38;
 		margin-top: -2.6vh;
+		text-align: justify; 
 	}
 	.text1{
 		font-size: 1.6em;
@@ -1126,12 +1128,14 @@
 	.for_title1 h1 {
 		font-size: 36px;
 		font-weight: 500;
+		text-align: justify; 
 	}
 	.for_title1 h2 {
 		font-size: 14.8px;
 		font-weight: 400;
 		margin-bottom: 2vh;
 		margin-top: -1vh;
+		text-align: justify; 
 	}
 	.new_bac{
 		display: block;
